Remove MORE obsolete references to c++17 and JDK9